nothing really new

--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-	<iframe width="560" height="315" src="http://www.youtube.com/embed/9rpbcU4NqLQ" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="http://www.youtube.com/watch?v=sQ5Hs8ijmlk" frameborder="0" allowfullscreen></iframe>
 </body>
 
 </html>
